--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 
 <h1>Klingonsk ordbok</h1>
 
-<input id=search type=text autocomplete=off style=width:100%;>
+<input id=search type=text autocomplete=off style="width:calc(100% - 16px);">
 
 <hr>
 
